# zk-rollup-advsec

./: .gitignore  Cargo.toml  LICENSE  README.md
circuits/: check_leaf_existence.circom  circuit.circom  circuit.r1cs  generate_input.js  generate_key.js  get_merkle_root.circom  input.json  package-lock.json  package.json  verify_eddsamimc.circom
circuits/circuit_js/: circuit.wasm
src/: builder.rs  main.rs  mimc.rs  verifier_groth.sol
